--- a/Kombit.Samples.CH.WebsiteDemo/sp.Master
+++ b/Kombit.Samples.CH.WebsiteDemo/sp.Master
@@ -2,25 +2,39 @@
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
-<html xmlns="http://www.w3.org/1999/xhtml" >
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head runat="server">
     <meta http-equiv="Pragma" content="no-cache" />
     <title>Service Provider</title>
+
+    <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <link rel="Stylesheet" href="css/Style.css" />
+    
+
+    <script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
+
 </head>
 <body>
     <form id="form1" runat="server">
-    <div>
-        <asp:Image runat="server" ID="Branding" ImageUrl="~/images/oiosamlnet_roed.gif" AlternateText="OIOSAML.NET" ></asp:Image>
-    </div>
-    <hr />
-    <div>
-        <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
-        
-        </asp:ContentPlaceHolder>
-    </div>
-    <hr />
+        <div class="container fill">
+            <div class="content fill">
+                <div class="header">
+                    <img alt="Kombit" src="images/kombit.png" class="header-logo" />
+                </div>
+                <br />
+                <div>
+                    <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
+                    </asp:ContentPlaceHolder>
+                </div>
+                <div class="footer">
+                    <img alt="Safewhere" src="images/safewhere_logo.png" class="footer-logo" />
+                </div>
+            </div>
+         </div>
     </form>
 </body>
 </html>
